package equipements.armes;

public abstract class CAC extends Armes{
    public CAC() {
        super(1);
    }
}
