package equipements.armes;

public abstract class Guerre extends CAC{
    public Guerre() {

        this.m_degats = 0;
        this.m_changeStat = true;
    }

    @Override
    public void determinerDegat(){
        this.m_degats = des.lancerDes(1, 8);
    }
}
