package equipements.armures;

public abstract class Legeres extends Armures{
    public Legeres(int classe) {

        super(classe);
        m_changeStat = false;
    }
}
