package equipements.armures;

public abstract class Lourdes extends Armures{
    public Lourdes(int classe) {

        super(classe);
        m_changeStat = true;
    }
}
