package personnages.classe;

public abstract class Classe {
}
