package personnages.classe;



public class Clerc extends Classe{
}
