package personnages.classe;

public class Guerrier extends Classe {
}
