package personnages.classe;

public class Magicien extends Classe {
}
