package personnages.classe;

public class Roublard extends Classe{
}
