package personnages.races;

import personnages.Personnage;

public class Elfe extends Race{
    public Elfe(Personnage p) {
        p.ajouterDexterite(6);
    }
}
