package personnages.races;

import personnages.Personnage;

public abstract class Race {
}